tests/invalid/str_join_wrong_arg_type/main.py
def run_case() -> None:
    sep: str = ","
    out: str = sep.join([1, 2])
    print(out)


if __name__ == "__main__":
    run_case()
